--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typedoc-repros",
   "dependencies": {
+    "@types/node": "latest",
     "typedoc": "latest",
     "typescript": "latest"
   }
