--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2022"],
     "strict": true,
     "noEmit": true
+    "allowImportingTsExtensions": true
   },
   "include": ["src"]
 }
