--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "Node16",
     "lib": ["ES2022"],
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
     "allowImportingTsExtensions": true
   },
   "include": ["src"]
